# qkeg

./: .clang-format  .gitmodules  CMakeLists.txt  loop.dio  updateSubmodule.bat
cmake/: AssetManagement.cmake  EDBRShaders.cmake  QkegDependencies.cmake  TargetShaders.cmake
games/sandbox/: CMakeLists.txt
games/sandbox/assets/levels/: burger_joint.json  castle.json  city.json  creepy_corridor.json
games/sandbox/assets/models/levels/castle/: castle2.gltf
games/sandbox/assets/models/levels/city/: city2.gltf
games/sandbox/assets/prefabs/: cato.json  static_geometry.json
games/sandbox/assets/settings/: animation.json  app_settings.json  input_actions.json  input_mapping.json
games/sandbox/src/: CameraManager.cpp  CameraManager.h  DynamicCameraHandler.cpp  DynamicCameraHandler.h  EntityInit.cpp  Game.cpp  Game.h  GameUtil.h  InputHandler.cpp  TrackingCameraHandler.cpp  TrackingCameraHandler.h  main.cpp
games/sandbox/src/Levels/: EntryLevel.cpp  EntryLevel.h
qkeg/: CMakeLists.txt
qkeg/include/: Application.h
qkeg/include/Core/: DeletionQueue.h
qkeg/include/ECS/: ComponentLoader.h  EntityLoader.h  EntityUtil.h
qkeg/include/ECS/Component/: Component.h  HierachyComponent.h  LightComponent.h  MeshComponent.h  MetadataComponent.h  MovementComponent.h  NameComponent.h  SceneComponent.h  SkeletonComponent.h  TransformComponent.h
qkeg/include/ECS/System/: MovementSystem.h  PlayerSkeletonSystem.h  SkeletonSystem.h  System.h  TransformSystem.h
qkeg/include/Graphics/: Buffers.h  Common.h  Cubemap.h  DynamicBuffer.h  GPUDevice.h
qkeg/include/Graphics/Camera/: Camera.h  CameraHandler.h
qkeg/include/Graphics/GLTFLoader/: GLTFLoader.h
qkeg/include/Graphics/Mesh/: GPUMaterial.h  GPUMesh.h  MaterialPool.h  MaterialProps.h  MeshDrawProps.h  MeshPool.h  MeshProps.h
qkeg/include/Graphics/Pipeline/: CubemapPipeline.h  GradientPipeline.h  MeshPipeline.h  Pipeline.h  SkeletonPipeline.h
qkeg/include/Graphics/Renderer/: Animation.h  AnimationPool.h  GameRenderer.h  Light.h  Scene.h  ScenePool.h  Skeleton.h
qkeg/include/Graphics/Vulkan/: BindlessDescriptor.h  GPUBuffer.h  GPUImage.h  ImagePool.h  ImageStream.h  PipelineBuilder.h  Swapchain.h  Util.h  VkDebugUtil.h  VkExcutor.h  VkInitializer.h  VkUtil.h
qkeg/include/Input/: ActionBinding.h  ActionMapping.h  ActionName.h  ActionTagHash.h  ButtonState.h  InputBinding.h  InputManager.h  InputMapping.h  KeyboardState.h  MouseState.h
qkeg/include/JsonParser/: JsonColor.h  JsonFile.h  JsonGLM.h  JsonGLM.inl  JsonNode.h  JsonNode.inl
qkeg/include/Level/: GameScene.h  GameScenePool.h  Level.h
qkeg/include/Math/: Transform.h
qkeg/include/Sound/: Sound.h  SoundPool.h
qkeg/src/: Application.cpp
qkeg/src/ECS/: ComponentLoader.cpp  EntityLoader.cpp  EntityUtil.cpp
qkeg/src/ECS/System/: MovementSystem.cpp  PlayerSkeletonSystem.cpp  SkeletonSystem.cpp  TransformSystem.cpp
qkeg/src/Graphics/: Buffers.cpp  Cubemap.cpp  GPUDevice.cpp  GameRenderer.cpp
qkeg/src/Graphics/Camera/: Camera.cpp
qkeg/src/Graphics/GLTFLoader/: GLTFLoader.cpp
qkeg/src/Graphics/Mesh/: MaterialPool.cpp  MeshPool.cpp
qkeg/src/Graphics/Pipeline/: CubemapPipeline.cpp  GradientPipeline.cpp  MeshPipeline.cpp  SkeletonPipeline.cpp  SpritePipeline.cpp
qkeg/src/Graphics/Renderer/: Animation.cpp  AnimationPool.cpp  GameRenderer.cpp  Light.cpp  Renderer2D.cpp  Scene.cpp  ScenePool.cpp  Skeleton.cpp  Sprite.cpp
qkeg/src/Graphics/Vulkan/: BindlessDescriptor.cpp  GPUBuffer.cpp  GPUImage.cpp  ImagePool.cpp  ImageStream.cpp  PipelineBuilder.cpp  Swapchain.cpp  VkDebugUtil.cpp  VkExcutor.cpp  VkInitializer.cpp  VkUtil.cpp
qkeg/src/Input/: ActionBinding.cpp  ActionMapping.cpp  ButtonState.cpp  InputManager.cpp  KeyboardState.cpp  MouseState.cpp
qkeg/src/JsonParser/: JsonColor.cpp  JsonFile.cpp  JsonNode.cpp
qkeg/src/Level/: GameScene.cpp  GameScenePool.cpp  Level.cpp
qkeg/src/Math/: Transform.cpp
qkeg/src/Shaders/: bindless.glsl  cubemap.frag  default.vert  fullScreenQuad.vert  gradient.frag  light.glsl  lighting.glsl  material.glsl  mesh.frag  mesh.vert  mesh_pcs.glsl  scene.glsl  skeleton.comp  vertex.glsl
